--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "docx4js": "^3.2.1",
@@ -18,12 +19,14 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "node-easy-docx": "^0.1.3",
+    "node-stream-zip": "^1.9.1",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "pdf-to-text": "0.0.7",
     "pug": "2.0.0-beta11",
+    "request": "^2.88.2",
     "resume-parser": "^1.1.0",
     "simple-resume-parser": "^1.1.8",
     "unzip": "^0.1.11"
