--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@
 /bazel-out
 
 # dependencies
-./front-end/node_modules
-./back-end/node_modules
+/front-end/node_modules
+/back-end/node_modules
 
 # profiling files
 chrome-profiler-events*.json
