--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,7 +28,9 @@
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "chart.js": "^2.7.2",
+    "ng2-charts": "^1.6.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.26",
